--- a/examples/SimpleFileRW/gradle.properties
+++ b/examples/SimpleFileRW/gradle.properties
@@ -17,4 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
+# Truman added {
+# The declaration indicates whether this application is only for testing purposes.
+android.injected.testOnly=false
+# }
