--- a/examples/RuntimeExec/app/build.gradle
+++ b/examples/RuntimeExec/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.truman.demo.runtimeexec"
+        applicationId 'com.truman.example.runtimeexec'
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
