feat: Add special-use fgs as a flavor

--- a/examples/FgService/app/build.gradle
+++ b/examples/FgService/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 30
         targetSdk 35
         versionCode 1
-        versionName "0.1.0"
+        versionName "0.2.0"
     }
 
     buildTypes {
@@ -23,6 +23,18 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+    }
+
+    flavorDimensions "type"
+    productFlavors {
+        Short {
+            dimension "type"
+            versionNameSuffix '-short'
+        }
+        Special {
+            dimension "type"
+            versionNameSuffix '-special'
+        }
     }
 }
 
