feat: Apply view-binding to "Btn2" flavor

--- a/examples/ExampleBase/app/build.gradle
+++ b/examples/ExampleBase/app/build.gradle
@@ -26,6 +26,10 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     flavorDimensions "composition"
     productFlavors {
         Btn2 {
