--- a/examples/ExampleBase/app/build.gradle
+++ b/examples/ExampleBase/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 6
-        versionName "1.3.3"
+        versionName "1.3.4"
     }
 
     buildFeatures {
@@ -26,6 +26,17 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+    }
+
+    applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach { output ->
+            def appName = "ExampleBase"
+            def versionName = variant.versionName
+            def buildTypeName = variant.buildType.name
+            def apkFileName = "${appName}-v${versionName}-${buildTypeName}.apk"
+
+            outputFileName = apkFileName
+        }
     }
 
     flavorDimensions "composition"
