--- a/examples/SimpleRuntimeExec/gradle/wrapper/gradle-wrapper.properties
+++ b/examples/SimpleRuntimeExec/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Feb 08 00:40:18 KST 2020
+#Tue Jul 22 01:53:11 KST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.4.1-all.zip
