--- a/examples/SimpleRuntimeExec/app/build.gradle
+++ b/examples/SimpleRuntimeExec/app/build.gradle
@@ -11,9 +11,12 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 1
-        versionName "0.2.2"
+        versionName "0.2.3"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
