--- a/examples/ExampleBase/app/build.gradle
+++ b/examples/ExampleBase/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 6
-        versionName "1.3.4"
+        versionName "1.4.0"
     }
 
     buildFeatures {
@@ -56,6 +56,10 @@ android {
         Btn5 {
             dimension "composition"
             versionNameSuffix '-btn5'
+        }
+        Dyn {
+            dimension "composition"
+            versionNameSuffix '-dyn'
         }
         IconBtn8 {
             dimension "composition"
