--- a/examples/ExampleBase/app/build.gradle
+++ b/examples/ExampleBase/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 6
-        versionName "1.6.0"
+        versionName "1.7.0"
     }
 
     buildFeatures {
@@ -68,6 +68,10 @@ android {
         SimpDyn {
             dimension "composition"
             versionNameSuffix '-simp-dyn'
+        }
+        Span {
+            dimension "composition"
+            versionNameSuffix '-span'
         }
         Term {
             dimension "composition"
